Add support for two char tokens, comments, error handling and white-space

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,13 +7,13 @@
     "activityBar.inactiveForeground": "#15202b99",
     "activityBarBadge.background": "#e33cbe",
     "activityBarBadge.foreground": "#e7e7e7",
-    "statusBar.background": "#4fc4e5",
+    "statusBar.background": "#4ec4e6",
     "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#23b5de",
-    "titleBar.activeBackground": "#4fc4e5",
+    "statusBarItem.hoverBackground": "#21b5e0",
+    "titleBar.activeBackground": "#4ec4e6",
     "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#4fc4e599",
+    "titleBar.inactiveBackground": "#4ec4e699",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.remoteColor": "#4fc4e5"
+  "peacock.remoteColor": "#4ec4e6"
 }
