--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@typescript-eslint/parser": "4.14.1",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
-    "eslint": "7.18.0",
+    "eslint": "^7.18.0",
+    "eslint-plugin-functional": "^3.2.1",
     "eslint-plugin-import": "2.22.1",
     "mocha": "8.2.1",
     "npm-run-all": "4.1.5",
